我的模块完成（未修改图片，昵称，计数）

--- a/test.html
+++ b/test.html
@@ -34,67 +34,109 @@
     <script>
         // 1. 定义 (路由) 组件。
         // 可以从其他文件 import 进来
-        import Vuex from 'Vuex'
-        Vue.use(Vuex)
 
-        const store = new Vuex.store({
-            state: {
-                count: 0
-            }
-        })
+        // const Foo = {
+        //     template: '<div>foo</div>',
+        //     created: function () {
+        //         //利用this.$route.query获取传递的参数
+        //         console.log(this.$route.query);
+        //     }
+        // }
+        // const Bar = {
+        //     template: '<div>bar</div>',
+        //     created: function () {
+        //         //此处为利用占位符传递参数获取参数的方式，利用this.$route.params获取传递的参数
+        //         console.log(this.$route.params);
+        //     }
+        // }
 
-        const Foo = {
-            template: '<div>foo</div>',
-            created: function () {
-                //利用this.$route.query获取传递的参数
-                console.log(this.$route.query);
-            }
-        }
-        const Bar = {
-            template: '<div>bar</div>',
-            created: function () {
-                //此处为利用占位符传递参数获取参数的方式，利用this.$route.params获取传递的参数
-                console.log(this.$route.params);
-            }
-        }
+        // // 2. 定义路由
+        // // 每个路由应该映射一个组件。 其中"component" 可以是
+        // // 通过 Vue.extend() 创建的组件构造器，
+        // // 或者，只是一个组件配置对象。
+        // // 我们晚点再讨论嵌套路由。
+        // const routes = [
+        //     { path: '/', redirect: Foo },
+        //     {
+        //         path: '/foo',
+        //         component: Foo,
+        //         children: [
+        //             {
+        //                 //子组件1，path:'',component:
+        //             },
+        //             {
+        //                 //子组件2
+        //             }
+        //         ]
+        //     },
+        //     //第二种传递参数方式，利用占位符
+        //     { path: '/bar/:name/:age', component: Bar }
+        // ]
 
-        // 2. 定义路由
-        // 每个路由应该映射一个组件。 其中"component" 可以是
-        // 通过 Vue.extend() 创建的组件构造器，
-        // 或者，只是一个组件配置对象。
-        // 我们晚点再讨论嵌套路由。
-        const routes = [
-            { path: '/', redirect: Foo },
-            {
-                path: '/foo',
-                component: Foo,
-                children: [
-                    {
-                        //子组件1，path:'',component:
-                    },
-                    {
-                        //子组件2
+        // // 3. 创建 router 实例，然后传 `routes` 配置
+        // // 你还可以传别的配置参数, 不过先这么简单着吧。
+        // const router = new VueRouter({
+        //     routes, // (缩写) 相当于 routes: routes
+        //     linkActiveClass: 'active'
+        // })
+
+        // // 4. 创建和挂载根实例。
+        // // 记得要通过 router 配置参数注入路由，
+        // // 从而让整个应用都有路由功能
+        // const app = new Vue({
+        //     router
+        // }).$mount('#app')
+        // // console.log(app.$route);
+
+        var nextPermutation = function (nums) {
+            var num = 0;
+            var min = 100;
+            var min_num = 0;
+            var temp = 0;
+            for (var i = nums.length - 1; i > 0; i--) {
+                if (nums[i] > nums[i - 1]) {
+                    num = i - 1;
+                    break;
+                }
+            }
+            console.log(num + "," + min + "," + min_num + "nums.length:" + nums.length);
+            for (var i = num + 1; i < nums.length; i++) {
+                if (nums[num] < nums[i] && nums[i] < min) {
+                    min = nums[i];
+                    min_num = i;
+                }
+            }
+            console.log(num + "," + min + "," + min_num + "nums.length:" + nums.length);
+            if (min_num) {
+                temp = nums[num];
+                nums[num] = nums[min_num];
+                nums[min_num] = temp;
+            }
+            console.log(num + "," + min + "," + min_num + "nums.length:" + nums.length);
+            if (num != nums.length - 1 && min_num) {
+                for (var i = num + 1; i < nums.length - 1; i++) {
+                    for (var j = num + 1; j < nums.length - 1; j++) {
+                        if (nums[j] > nums[j + 1]) {
+                            var temp = nums[j];
+                            nums[j] = nums[j + 1];
+                            nums[j + 1] = temp;
+                        }
                     }
-                ]
-            },
-            //第二种传递参数方式，利用占位符
-            { path: '/bar/:name/:age', component: Bar }
-        ]
+                }
+            }
+            if (!min_num) {
+                var m = 0, n = 0;
+                for (m = 0, n = nums.length - 1; m < n; m++, n--) {
+                    temp = nums[m];
+                    nums[m] = nums[n];
+                    nums[n] = temp;
+                }
+            }
+            console.log(num + "," + min + "," + min_num + "nums.length:" + nums.length);
+            return nums;
+        };
+        console.log(nextPermutation([3, 2, 1]));
 
-        // 3. 创建 router 实例，然后传 `routes` 配置
-        // 你还可以传别的配置参数, 不过先这么简单着吧。
-        const router = new VueRouter({
-            routes, // (缩写) 相当于 routes: routes
-            linkActiveClass: 'active'
-        })
-
-        // 4. 创建和挂载根实例。
-        // 记得要通过 router 配置参数注入路由，
-        // 从而让整个应用都有路由功能
-        const app = new Vue({
-            router
-        }).$mount('#app')
-        // console.log(app.$route);
     </script>
 </body>
 
